<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="input_check_amount_hint">Check</string>
    <string name="input_tip_percentage_hint">Tip Percentage</string>
    <string name="check">Check</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="zero_amount">$0.00</string>

    <string name="dollar_amount">$%1$.02f</string>

    <string name="save_hint">Enter Location</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_load">Load</string>

</resources>
