<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.marco.tipcalculator.viewmodel.CalculatorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calculation_inputs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:paddingBottom="26dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".view.MainActivity"
        tools:ignore="PrivateResource"
        tools:showIn="@layout/activity_main">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_check_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/input_check_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_check_amount_hint"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:text="@={vm.inputCheckAmount}"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_tip_percentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_check_amount">

            <EditText
                android:id="@+id/input_tip_percentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_tip_percentage_hint"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:text="@={vm.inputTipPercentage}"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/calculation_outputs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:baselineAligned="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_tip_percentage">


            <TextView
                android:id="@+id/bill_amount"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@{vm.outputCheckAmount}"
                android:textAlignment="center"
                app:layout_constraintBaseline_toBaselineOf="@+id/tip_amount"
                app:layout_constraintEnd_toStartOf="@+id/tip_amount"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="$20.00" />

            <TextView
                android:id="@+id/bill_amount_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/check"
                android:textAlignment="center"
                app:layout_constraintBaseline_toBaselineOf="@+id/tip_amount_label"
                app:layout_constraintEnd_toStartOf="@+id/tip_amount_label"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/tip_amount"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{vm.outputTipAmount}"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/bill_amount_label"
                app:layout_constraintEnd_toStartOf="@+id/grand_total"
                app:layout_constraintStart_toEndOf="@+id/bill_amount"
                tools:text="$1.50" />

            <TextView
                android:id="@+id/tip_amount_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/tip"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/grand_total_label"
                app:layout_constraintStart_toEndOf="@+id/bill_amount_label" />


            <TextView
                android:id="@+id/grand_total"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@{vm.outputTotalDollarAmount}"
                android:textAlignment="center"
                app:layout_constraintBaseline_toBaselineOf="@+id/tip_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tip_amount"
                tools:text="$21.50" />

            <TextView
                android:id="@+id/grand_total_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/total"
                android:textAlignment="center"
                app:layout_constraintBaseline_toBaselineOf="@+id/tip_amount_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tip_amount_label" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/calculation_name"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculation_outputs"
            android:textAlignment="center"
            android:text="@{vm.locationName}"
            tools:text="Veggie Place"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>